firefox-trunk (61.0~a1~hg20180322r409457-0ubuntu1) UNRELEASED; urgency=medium

  * Drop upstreamed/obsolete patches
    - debian/patches/skia-fix-aarch64-build-on-older-linux.patch
  * Update patches
    - debian/patches/reduce-rust-debuginfo-on-32bit-architectures.patch
    - debian/patches/rust-drop-dll-checksums.patch
  * Add icon symlinks of application icon to usr/share/icons/hicolor/*/apps/
    - debian/firefox.dirs.in
    - debian/firefox.links.in
  * ICU's icudt60*.dat was embed directly into the library
    - debian/firefox.install.in
  * Revert "Use https://ftp.mozilla.org/pub/firefox/candidates/*/*/SOURCE
    to determine the revision for release builds"
    - update debian/build/create-tarball.py

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Wed, 14 Mar 2018 15:03:06 +0100

firefox-trunk (60.0~a1~hg20180311r407525-0ubuntu1) bionic; urgency=medium

  * Bump build-dep on rustc >= 1.24.0 and cargo >= 0.25
  * Use https://ftp.mozilla.org/pub/firefox/candidates/*/*/SOURCE to determine
    the revision for release builds
    - update debian/build/create-tarball.py
  * Don't exclude ".gitmodule" files
    - update debian/build/create-tarball.py
  * Update patches
    - debian/patches/disable-geo-specific-search-defaults-for-us.patch
    - debian/patches/webrtc-fix-compiler-flags-for-armhf.patch
    - debian/patches/skia-fix-aarch64-build-on-older-linux.patch
  * Add Occitan language pack
    - update debian/config/locales.shipped
    - update debian/control
  * Move symlink of application icon to usr/share/icons/hicolor/128x128/apps/
    - debian/firefox.dirs.in
    - debian/firefox.links.in
  * Disabled patches
    - debian/patches/allow-lockPref-everywhere.patch
    - debian/patches/unity-menubar.patch

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Sun, 11 Mar 2018 12:49:30 +0100

firefox-trunk (59.0~a1~hg20180120r400081-0ubuntu1) bionic; urgency=medium

  [ Rico Tzschichholz ]
  * Follow change of icons location
    - debian/firefox.install.in